--- a/index.html
+++ b/index.html
@@ -1,145 +1,60 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gibbs PC Consulting</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Open Sans', sans-serif;
-      line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #005ca8;
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header img {
-      width: 100px;
-      margin-bottom: 10px;
-    }
-    nav {
-      background: #003f73;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      display: inline-block;
-      padding: 15px 0;
-      font-weight: 600;
-    }
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-    }
-    .service {
-      background: white;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    footer {
-      background: #005ca8;
-      color: white;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    .contact-info a {
-      color: white;
-      display: block;
-      margin-top: 10px;
-      text-decoration: none;
-    }
-    .social a {
-      margin: 0 10px;
-      font-size: 20px;
-      text-decoration: none;
-    }
-    .button {
-      display: inline-block;
-      margin-top: 20px;
-      background: #0072c6;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 6px;
-      text-decoration: none;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.png" alt="Gibbs PC Consulting Logo">
-    <h1>Gibbs PC Consulting</h1>
-    <p>Small Business & Home IT Support Solutions</p>
+  <header class="hero" style="background-image: url('images/hero.jpg');">
+    <div class="overlay">
+      <img src="images/logo.png" alt="Gibbs PC Consulting" class="logo"/>
+      <h1>Fast, Reliable Tech Support for Home & Small Business</h1>
+      <p>Proactive Monitoring and Fast Remote Support</p>
+      <a href="#services" class="cta-button">Our Services</a>
+    </div>
   </header>
 
   <nav>
-    <a href="#about">About</a>
     <a href="#services">Services</a>
+    <a href="#testimonials">Testimonials</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>We specialize in helping small businesses and home users with proactive system monitoring, PC upgrades, virus removal, repairs, custom builds, and remote tech support. Our mission is to keep your technology running smoothly and efficiently.</p>
-  </section>
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="service">
-        <h3>PC & Laptop Repair</h3>
-        <p>Fast and affordable diagnostics and repairs for desktops and laptops.</p>
-      </div>
-      <div class="service">
-        <h3>Virus & Malware Removal</h3>
-        <p>Thorough removal of malware and protection against future threats.</p>
-      </div>
-      <div class="service">
-        <h3>Custom PC & Gaming Builds</h3>
-        <p>Tailored systems built for your exact needs and performance.</p>
-      </div>
-      <div class="service">
-        <h3>Remote IT Support</h3>
-        <p>Convenient and fast remote troubleshooting and issue resolution.</p>
-      </div>
-      <div class="service">
-        <h3>Network Setup</h3>
-        <p>Home and business networking, including routers, cabling, and Wi-Fi optimization.</p>
-      </div>
-      <div class="service">
-        <h3>Proactive Monitoring</h3>
-        <p>Preventative care to detect and resolve issues before they impact your work.</p>
-      </div>
+  <section id="services" class="section">
+    <h2>What We Do</h2>
+    <div class="grid">
+      <div><img src="images/services.jpg" alt="Service"><h3>PC & Laptop Repair</h3></div>
+      <div><img src="images/network.jpg" alt="Networking"><h3>Network Setup</h3></div>
+      <div><img src="images/consulting.jpg" alt="Consulting"><h3>IT Consulting</h3></div>
+      <div><img src="images/services.jpg" alt="Remote"><h3>Remote Support</h3></div>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="testimonials" class="section">
+    <h2>What Clients Say</h2>
+    <blockquote>
+      “Another happy customer! Thank you Owen Dierolf for the kind words.”
+      <footer>– Owen Dierolf, Facebook</footer>
+    </blockquote>
+    <blockquote>
+      “Eric helped me build a great PC at a great price, within my budget!”
+      <footer>– Facebook Review</footer>
+    </blockquote>
+  </section>
+
+  <section id="contact" class="section contact">
     <h2>Get in Touch</h2>
-    <p>Email: <a href="mailto:Eric@GibbsPCConsulting.com">Eric@GibbsPCConsulting.com</a></p>
-    <p>Phone: <a href="tel:6106758030">610-675-8030</a></p>
-    <p class="social">
-      <a href="https://www.facebook.com/GibbsPCSupport/" target="_blank">Facebook</a>
-    </p>
-    <a class="button" href="mailto:Eric@GibbsPCConsulting.com">Request Help</a>
+    <p><strong>Email:</strong> <a href="mailto:Eric@GibbsPCConsulting.com">Eric@GibbsPCConsulting.com</a></p>
+    <p><strong>Phone:</strong> <a href="tel:6106758030">610-675-8030</a></p>
+    <p><a href="https://www.facebook.com/GibbsPCSupport/" target="_blank">Facebook Page</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Gibbs PC Consulting. All rights reserved.</p>
+    <p>&copy; 2025 Gibbs PC Consulting</p>
   </footer>
 </body>
 </html>
