--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=c533sT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=c533sT" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=BVJIRe"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=BVJIRe" type="text/css">
 
   
   
@@ -38,10 +38,10 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="https://mobiri.se">
-						<img src="assets/images/chatgpt20image20jul20312020252001-20-4420pm-244x244.png" alt="Mobirise Website Builder" style="height: 4.3rem;">
+						<img src="assets/images/chatgpt20image20jul20312020252001-20-4420pm-244x244.png" alt="Mobirise Website Builder" style="height: 5rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobiri.se">Gibbs PC Consulting</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobiri.se">Gibbs PC Consulting LLC</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="content-wrap col-12 col-md-12">
         <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
-          <strong>Gibbs PC Consulting</strong></h1>
+          <strong>Gibbs PC Consulting LLC</strong></h1>
         
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Your technology, expertly managed for peak performance.</p>
         <div class="mbr-section-btn">
@@ -284,7 +284,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="iKurILkySRH5DER1f/AInZuyVo2Y75WygoYQDaGFQ7PokOpdM68PKaQYYfOEiGAIb0j7wK7NJWwRlLNQbcH6NGfMpqyXDdCFDbe8+E6cN+v/N7dUczww3LBbqMeZ9FD/">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Aai127GqUDfNn+NPMNTMWPVZGBIJhvP4rVAHQLRnk74Ovopfxqu0vcVLgEf2YJbmBqb3rBY6uGnODfK1WgcqlmAzhn15FdsgM+TejRLBP0O25d+G3YDaFVwR2Hev1dIE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -394,7 +394,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 center mt-2 mb-3">
-                <p class="mbr-fonts-style copyright mb-0 display-7">Copyright © 2025 Gibbs PC Consulting. All rights reserved.</p>
+                <p class="mbr-fonts-style copyright mb-0 display-7">Copyright © 2025 Gibbs PC Consulting LLC. All rights reserved.</p>
             </div>
             <div class="col-12 col-lg-6 center">
                 <div class="row-links mt-2 mb-3">
